Fri Jun 4  18:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gnubg.c: Add show scoresheet command (to right click menu)

Wed Jun 2  9:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkgame.c, gtkboard.c: Add undo right click menu

Thu May 27 19:05:49 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* import.c (ParseMatMove): fix logic for calculating
	resignations.
	(reported by Joachim Matussek)

Tur May 20 15:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* external.*: Remove memory leaks

Tue May 18 15:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* external.*: Minor changes to parser

Tue May 18 8:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gtkprefs.c, render.c: Several small fixes to board appearance options

Wed May 12 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* boards.xml, gtkprefs.c, render.c+.h, renderprefs.c:
	Add Taki-style rounded points

Mon May 10 21:33:28 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* external.h: move "#define closesocket close" to external.h

Sat May  8 11:25:08 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* gnubg.c, show.c: enlarge buffers

Fri May  7 21:13:26 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	* external_l.l: fix buffer overflow.

Fri May  8 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* external.c, dice.c, set.c: Fix socket code for windows

Fri May  7 16:17:09 CEST 2004  Joern Thyssen  <jth@gnubg.org>

	Change union moverecord into struct moverecord
	(this is step 1 towards better support for editing positions
	and storing analysis)

 	* backgammon.h: Change union moverecord into struct moverecord
	(change a gazillion subroutines)

Fri May  8 10:56:45 2003 GMT  Jon Kinsey <Jon_Kinsey@hotmail.com>

	* gnubg.c, gtkgame.c, gtkpath.c, set.c: Added png to set path command

Fri May  7 07:48:47 CEST 2004  Joern Thyssen  <jth@gnubg.org>
                                                                                